@@ -839,6 +839,7 @@ Arfrever Frehtes Taifersar Arahesis
 Geoff Talvola
 William Tanksley
 Christian Tanzer
+Stefano Taschini
 Steven Taschuk
 Monty Taylor
 Amy Taylor
